# oak-package-manager

./: .env  .env.production  DEPLOY_INSTRUCTIONS.md  DOCKER_TROUBLESHOOTING.md  FINAL_FIX_INSTRUCTIONS.md  GITEA_INTEGRATION_FIX.md  HOMELAB_DEPLOY_GUIDE.md  PORTS.md  PORTS_CONFIGURATION.md  POSTGRESQL_SETUP.md  POSTGRESQL_SUMMARY.md  README.md  TROUBLESHOOTING.md  cleanup-containers.bat  cleanup-containers.sh  deploy.bat  deploy.sh  docker-compose.yml  docker-help.bat  docker-help.sh  homelab-deploy.bat  homelab-deploy.sh  quick-build-test.bat  quick-build-test.sh  start.bat  start.sh  test-build.bat  test-build.sh  verify-system.sh  verify.bat  verify.sh
dryad-web/: .env.docker  (+3 more)
dryad_base/: Cargo.toml
dryad_base/dryad_cli/: Cargo.toml
dryad_base/dryad_cli/src/: main.rs
dryad_base/dryad_errors/src/: error_urls.rs
dryad_base/dryad_lexer/src/: lexer.rs
dryad_base/dryad_lexer/tests/: async_threading_tests.rs  const_keyword_tests.rs  lexer_tests.rs
dryad_base/dryad_parser/src/: ast.rs  parser.rs
dryad_base/dryad_parser/tests/: async_threading_parser_tests.rs  const_parser_tests.rs  parser_tests.rs  statement_tests.rs
dryad_base/dryad_runtime/src/: interpreter.rs
dryad_base/examples/: http_test.dryad  test_error.dryad  test_hashmap.dryad  test_http_separated.dryad  test_unified_errors.dryad  teste_correcao_final.dryad  teste_servidor_novo.dryad
dryad_base/meu-projeto/: README.md  main.dryad  oaklibs.json
dryad_base/oak/: Cargo.toml
dryad_base/projeto-final/: README.md  main.dryad  oaklibs.json
oak/: Cargo.toml  test_result.txt
oak/src/: main.rs
(+121 files in other folders)
