[package]
name = "oak"
version = "0.1.0"
edition = "2021"
description = "Gestor de pacotes para a linguagem Dryad"

[[bin]]
name = "oak"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
url = "2.3"
